- Added the ability to sign in and out - Added views for logging in and for profile management - Added the ability to change your account information - Added the ability to change your password - Added the ability to register

--- a/public/client/content/app.css
+++ b/public/client/content/app.css
@@ -1,3 +1,6 @@
+.error {
+  color: red; }
+
 .heading-inline {
   display: inline-block; }
 
@@ -48,3 +51,6 @@
   background-color: lightblue !important; }
 #certification-view tr.category-group {
   background-color: lightgray; }
+
+#login-view .login-wrapper {
+  width: 80%; }
