--- a/public/client/content/app.scss
+++ b/public/client/content/app.scss
@@ -1,3 +1,9 @@
+
+.error{
+  color: red;
+}
+
+
 .heading-inline{
   display: inline-block;
 }
@@ -85,5 +91,11 @@
 
   tr.category-group{
     background-color: lightgray;
+  }
+}
+
+#login-view{
+  .login-wrapper{
+    width: 80%;
   }
 }
