--- a/public/client/lib/endless/less/animations.less
+++ b/public/client/lib/endless/less/animations.less
@@ -193,6 +193,116 @@
 	}
 }
 
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(20px);
+    }
+    100% {
+    	opacity: 1;
+        transform: translateX(0);
+	}
+}
+
+@-webkit-keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+    	-webkit-transform: translateX(20px);
+	}
+	100% {
+		opacity: 1;
+        -webkit-transform: translateX(0);
+	}
+}
+
+@-moz-keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+    	-moz-transform: translateX(20px);
+	}
+	100% {
+		opacity: 1;
+        -moz-transform: translateX(0px);
+	}
+}
+
+@-ms-keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+    	-ms-transform: translateX(20px);
+	}
+	100% {
+		opacity: 1;
+        -ms-transform: translateX(0);
+	}
+}
+
+@-o-keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+    	-o-transform: translateX(20px);
+	}
+	100% {
+		opacity: 1;
+        -o-transform: translateX(0);
+	}
+}
+
+@keyframes fadeInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+	}
+}
+
+@-webkit-keyframes fadeInRight {
+    0% {
+        opacity: 0;
+    	-webkit-transform: translateX(-20px);
+	}
+	100% {
+		opacity: 1;
+        -webkit-transform: translateX(0);
+	}
+}
+
+@-moz-keyframes fadeInRight {
+    0% {
+        opacity: 0;
+    	-moz-transform: translateX(-20px);
+	}
+	100% {
+		opacity: 1;
+        -moz-transform: translateX(0px);
+	}
+}
+
+@-ms-keyframes fadeInRight {
+    0% {
+        opacity: 0;
+    	-ms-transform: translateX(-20px);
+	}
+	100% {
+		opacity: 1;
+        -ms-transform: translateX(0);
+	}
+}
+
+@-o-keyframes fadeInRight {
+    0% {
+        opacity: 0;
+    	-o-transform: translateX(-20px);
+	}
+	100% {
+		opacity: 1;
+        -o-transform: translateX(0);
+	}
+}
+
 @keyframes fadeInUpLarge {
     0% {
         opacity: 0;
@@ -306,7 +416,7 @@
 @keyframes fadeInLeftLarge {
     0% {
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(100px);
     }
     100% {
         opacity: 1;
@@ -317,7 +427,7 @@
 @-webkit-keyframes fadeInLeftLarge {
     0% {
         opacity: 0;
-    	-webkit-transform: translateX(-100px);
+    	-webkit-transform: translateX(100px);
 	}
 	100% {
 		opacity: 1;
@@ -328,7 +438,7 @@
 @-moz-keyframes fadeInLeftLarge {
     0% {
         opacity: 0;
-    	-moz-transform: translateX(-100px);
+    	-moz-transform: translateX(100px);
 	}
 	100% {
 		opacity: 1;
@@ -339,7 +449,7 @@
 @-ms-keyframes fadeInLeftLarge {
     0% {
         opacity: 0;
-    	-ms-transform: translateX(-100px);
+    	-ms-transform: translateX(100px);
 	}
 	100% {
 		opacity: 1;
@@ -350,7 +460,7 @@
 @-o-keyframes fadeInLeftLarge {
     0% {
         opacity: 0;
-    	-o-transform: translateX(-100px);
+    	-o-transform: translateX(100px);
 	}
 	100% {
 		opacity: 1;
@@ -361,7 +471,7 @@
 @keyframes fadeInRightLarge {
     0% {
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(-100px);
     }
     100% {
         opacity: 1;
@@ -372,7 +482,7 @@
 @-webkit-keyframes fadeInRightLarge {
     0% {
         opacity: 0;
-        -webkit-transform: translateX(100px);
+        -webkit-transform: translateX(-100px);
 	}
 	100% {
 		opacity: 1;
@@ -383,7 +493,7 @@
 @-moz-keyframes fadeInRightLarge {
     0% {
         opacity: 0;
-    	-moz-transform: translateX(100px);
+    	-moz-transform: translateX(-100px);
 	}
 	100% {
 		opacity: 1;
@@ -394,7 +504,7 @@
 @-ms-keyframes fadeInRightLarge {
     0% {
         opacity: 0;
-    	-ms-transform: translateX(100px);
+    	-ms-transform: translateX(-100px);
 	}
 	100% {
 		opacity: 1;
@@ -405,7 +515,7 @@
 @-o-keyframes fadeInRightLarge {
     0% {
         opacity: 0;
-    	-o-transform: translateX(100px);
+    	-o-transform: translateX(-100px);
 	}
 	100% {
 		opacity: 1;
@@ -1117,5 +1227,175 @@
 @keyframes progress-start {
     0%  {
         width: 0;   
+    }
+}
+
+@-webkit-keyframes flipInH  {
+    0%  {
+        -webkit-transform: perspective(1000px) rotateY(90deg);
+        opacity: 0;
+    }
+    33% {
+        -webkit-transform: perspective(1000px) rotateY(-10deg);
+    }
+    66% {
+        -webkit-transform: perspective(1000px) rotateY(10deg);
+    }
+    100%    {   
+        -webkit-transform: perspective(1000px) rotateY(0deg);
+        opacity:1;
+    }
+}
+
+@-moz-keyframes flipInH  {
+    0%  {
+        -moz-transform: perspective(1000px) rotateY(90deg);
+        opacity: 0;
+    }
+    33% {
+        -moz-transform: perspective(1000px) rotateY(-10deg);
+    }
+    66% {
+        -moz-transform: perspective(1000px) rotateY(10deg);
+    }
+    100%    {   
+        -moz-transform: perspective(1000px) rotateY(0deg);
+        opacity:1;
+    }
+}
+
+@-ms-keyframes flipInH  {
+    0%  {
+        -ms-transform: perspective(1000px) rotateY(90deg);
+        opacity: 0;
+    }
+    33% {
+        -ms-transform: perspective(1000px) rotateY(-10deg);
+    }
+    66% {
+        -ms-transform: perspective(1000px) rotateY(10deg);
+    }
+    100%    {   
+        -ms-transform: perspective(1000px) rotateY(0deg);
+        opacity:1;
+    }
+}
+
+@-o-keyframes flipInH  {
+    0%  {
+        -o-transform: perspective(1000px) rotateY(90deg);
+        opacity: 0;
+    }
+    33% {
+        -o-transform: perspective(1000px) rotateY(-10deg);
+    }
+    66% {
+        -o-transform: perspective(1000px) rotateY(10deg);
+    }
+    100%    {   
+        -o-transform: perspective(1000px) rotateY(0deg);
+        opacity:1;
+    }
+}
+
+@keyframes flipInH  {
+    0%  {
+        transform: perspective(1000px) rotateY(90deg);
+        opacity: 0;
+    }
+    33% {
+        transform: perspective(1000px) rotateY(-10deg);
+    }
+    66% {
+        transform: perspective(1000px) rotateY(10deg);
+    }
+    100%    {   
+        transform: perspective(1000px) rotateY(0deg);
+        opacity:1;
+    }
+}
+
+@-webkit-keyframes flipInV  {
+    0%  {
+        -webkit-transform: perspective(1000px) rotateX(90deg);
+        opacity: 0;
+    }
+    33% {
+        -webkit-transform: perspective(1000px) rotateX(-10deg);
+    }
+    66% {
+        -webkit-transform: perspective(1000px) rotateX(10deg);
+    }
+    100%    {   
+        -webkit-transform: perspective(1000px) rotateX(0deg);
+        opacity:1;
+    }
+}
+
+@-moz-keyframes flipInV  {
+    0%  {
+        -moz-transform: perspective(1000px) rotateX(90deg);
+        opacity: 0;
+    }
+    33% {
+        -moz-transform: perspective(1000px) rotateX(-10deg);
+    }
+    66% {
+        -moz-transform: perspective(1000px) rotateX(10deg);
+    }
+    100%    {   
+        -moz-transform: perspective(1000px) rotateX(0deg);
+        opacity:1;
+    }
+}
+
+@-ms-keyframes flipInV  {
+    0%  {
+        -ms-transform: perspective(1000px) rotateX(90deg);
+        opacity: 0;
+    }
+    33% {
+        -ms-transform: perspective(1000px) rotateX(-10deg);
+    }
+    66% {
+        -ms-transform: perspective(1000px) rotateX(10deg);
+    }
+    100%    {   
+        -ms-transform: perspective(1000px) rotateX(0deg);
+        opacity:1;
+    }
+}
+
+@-o-keyframes flipInV  {
+    0%  {
+        -o-transform: perspective(1000px) rotateX(90deg);
+        opacity: 0;
+    }
+    33% {
+        -o-transform: perspective(1000px) rotateX(-10deg);
+    }
+    66% {
+        -o-transform: perspective(1000px) rotateX(10deg);
+    }
+    100%    {   
+        -o-transform: perspective(1000px) rotateX(0deg);
+        opacity:1;
+    }
+}
+
+@keyframes flipInV  {
+    0%  {
+        transform: perspective(1000px) rotateX(90deg);
+        opacity: 0;
+    }
+    33% {
+        transform: perspective(1000px) rotateX(-10deg);
+    }
+    66% {
+        transform: perspective(1000px) rotateX(10deg);
+    }
+    100%    {   
+        transform: perspective(1000px) rotateX(0deg);
+        opacity:1;
     }
 }
