--- a/public/client/lib/endless/less/basic.less
+++ b/public/client/lib/endless/less/basic.less
@@ -10,6 +10,19 @@ body    {
     }
 }
 
+::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(50,50,50,0.3);
+}
+
+::-webkit-scrollbar-track {
+    background-color: rgba(50,50,50,0.2);
+}
+
 img {
     max-width: 100%;   
 }
@@ -29,11 +42,13 @@ hr {
 
 a   {
     color:#555;   
+    .transition(all 0.2s ease);
 }
 
 a:hover, a:focus {
     color: #999;
     text-decoration: none;
+    .transition(all 0.2s ease);
 }
 
 .list-group-item ,a.list-group-item    {
