--- a/public/client/lib/endless/less/sidebar-control.less
+++ b/public/client/lib/endless/less/sidebar-control.less
@@ -55,7 +55,7 @@
                                         margin-left: 0;   
                                     }
                                     
-                                    .pull-right {
+                                    .badge {
                                         display: none;
                                     }
                                 }
