--- a/public/client/lib/endless/less/variables.less
+++ b/public/client/lib/endless/less/variables.less
@@ -1,7 +1,8 @@
-@primary-color: #323447;
+@primary-color: #3c8dbc;
 @background-color: #f9f9f9;
 @sidebar-width: 180px;
 @mini-sidebar-width: 90px;
+@sidebar-color: #323447;
 @sidebar-font-color: lighten(@primary-color,45%);
 @sidebar-font-hover: #fff;
 @topnav-color: rgba(255,255,255,0.9);
