--- a/public/client/lib/endless/less/animations.less
+++ b/public/client/lib/endless/less/animations.less
@@ -1399,3 +1399,14 @@
         opacity:1;
     }
 }
+
+@-webkit-keyframes text-color-animation  {
+    0%  {
+        
+    }
+    50%    {   
+        color: #fff;
+    }
+    100%    {   
+    }
+}
