--- a/public/client/lib/endless/less/endless.less
+++ b/public/client/lib/endless/less/endless.less
@@ -24,6 +24,8 @@
 @import "inbox.less";
 @import "gallery.less";
 @import "pricing-table.less";
+@import "chat.less";
+@import "movie.less";
 
 @import "thirdparty-fullcalendar.less";
 @import "thirdparty-gritter.less";
