--- a/public/client/lib/endless/less/basic.less
+++ b/public/client/lib/endless/less/basic.less
@@ -51,6 +51,10 @@ a:hover, a:focus {
     .transition(all 0.2s ease);
 }
 
+.navbar.navbar-inverse   {
+    background-color: #111;
+}
+
 .list-group-item ,a.list-group-item    {
     border-color: @light-color;   
     color: #777;
