--- a/public/client/lib/endless/less/inbox.less
+++ b/public/client/lib/endless/less/inbox.less
@@ -21,7 +21,7 @@
         .transition(all 0.5s ease);
         
         @media (min-width: 768px)   {
-            height: auto !improtant;
+            height: auto !important;
         }
         
         @media (max-width: 767px)   {
