--- a/public/client/lib/endless/css/endless.css
+++ b/public/client/lib/endless/css/endless.css
@@ -2164,6 +2164,9 @@ footer hr {
   top: 0;
   bottom: -100px;
   position: fixed;
+  /*position: relative;*/
+  /*width: 100%;*/
+  /*height: 100%;*/
   z-index: 9999;
   opacity: 1;
 }
