--- a/public/client/content/app.scss
+++ b/public/client/content/app.scss
@@ -31,9 +31,9 @@
 #wrapper{
   min-height: 600px;
 
-  #main-container{
-    min-height: 600px;
-  }
+//  #main-container{
+//    min-height: 600px;
+//  }
 }
 
 #home-view{
